fix: fix footer overlap on 992px

--- a/christmas-shop/style/adaptive.css
+++ b/christmas-shop/style/adaptive.css
@@ -39,13 +39,13 @@
 
 @media (max-width: 992px) {
   .contacts {
-    margin-left: 8px;
-    margin-right: 8px;
     flex-direction: column;
+    padding-left: 8px;
+    padding-right: 8px;
   }
 
   .contact {
-    width: 100%;
+    width: inherit;
     margin-bottom: 12px;
     padding-bottom: 10px;
   }
